# bias-check

./: .coverage  .gitignore  Makefile  README.md  analysis_config.json  bias_coverage_analysis.md  check_demo_plots_coverage.py  demo_plots_coverage_report.json  demo_results.csv  demo_runner.py  optimal_test_selector.py  pyproject.toml  rag-bias-runner.py  rag_bias_analysis.py  rag_bias_runner.py  validate_documentation_alignment.py
.cache/: api_responses.json
.github/: copilot-instructions.md
docs/: rag-bias-research.md  rag-test-profiles.md
rag_bias_analysis/: __init__.py  analyzers.py  claude_analyzer.py  core.py  models.py
tests/: conftest.py  test_comprehensive_bias_detection.py
